[package]
name = "my_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*" # 通配符*表示可以使用任何版本，通常会拉取最新版本
# chrono = "0.4"

serde = "1.0"
serde_json = "1.0"
typetag = "0.1"

parse-display = "0.8"
derive_deref = "1.1"